# ansible-portable

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: builder.yaml
